--- a/baitu-usyaqil-quran/src/app/globals.css
+++ b/baitu-usyaqil-quran/src/app/globals.css
@@ -76,7 +76,7 @@ button {
   margin-bottom: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .title-section h2 {
     font-size: 2rem;
   }
